--- a/KGERP/Views/ChequeRegister/NewChequeBook.cshtml
+++ b/KGERP/Views/ChequeRegister/NewChequeBook.cshtml
@@ -165,10 +165,10 @@
                                         <td>@item.AccountNumber</td>
                                         <td>@item.ChequeBookNo</td>
                                         <td>@item.BookFirstPageNumber</td>
-                                        <td>[@item.BookLastPageNumber</td>
-                                        <td>[@item.TotalBookPage</td>
-                                        <td>[@item.UsedBookPage</td>
-                                        <td>[@item.Remarks</td>
+                                        <td>@item.BookLastPageNumber</td>
+                                        <td>@item.TotalBookPage</td>
+                                        <td>@item.UsedBookPage</td>
+                                        <td>@item.Remarks</td>
                                         <td>
                                             @if (item.UsedBookPage > 0)
                                             {
