--- a/KGERP/Views/ChequeRegister/BankAccountInformation.cshtml
+++ b/KGERP/Views/ChequeRegister/BankAccountInformation.cshtml
@@ -1,6 +1,6 @@
-﻿@model KGERP.Service.ServiceModel.ChequeBookModel
+﻿@model KGERP.Service.ServiceModel.BankAccountInfo
 @{
-    ViewData["Title"] = "New Cheque Book";
+    ViewData["Title"] = "Bank A/C Info";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,15 +12,15 @@
 
 <section class="content-header">
     <h1>
-        New Cheque Book
+        Bank A/C Info
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">New Cheque Book</li>
+        <li class="active">Bank A/C Info</li>
     </ol>
 </section>
 
-@using (Html.BeginForm("NewChequeBook", "ChequeRegister", FormMethod.Post, new { id = "ChequeBookFormId", @class = "formValidator" }))
+@using (Html.BeginForm("BankAccountInformation", "ChequeRegister", FormMethod.Post, new { id = "BankAccountInformationFormId", @class = "formValidator" }))
 {
     <section class="content">
         <div class="row">
@@ -51,7 +51,7 @@
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label class="form-label">A/C Holder Name<sup class="text-danger" title="Required">*</sup></label>
+                                <label class="form-label">A/C Name<sup class="text-danger" title="Required">*</sup></label>
                                 @Html.TextBoxFor(model => model.AccountName, new { id = "txtAccountName", @class = "form-control", @placeholder = "A/C name", required = "true" })
                                 @Html.ValidationMessageFor(model => model.AccountName, "", new { @class = "text-danger" })
                             </div>
@@ -65,37 +65,6 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label class="form-label">Cheque Book No<sup class="text-danger" title="Required">*</sup></label>
-                                @Html.TextBoxFor(model => model.ChequeBookNo, new { id = "txtChequeBookNo", @class = "form-control", @placeholder = "Cheque Book No", required = "true", @readonly = "true" })
-                                @Html.ValidationMessageFor(model => model.ChequeBookNo, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label class="form-label">First Page Number<sup class="text-danger" title="Required">*</sup></label>
-                                @Html.TextBoxFor(model => model.BookFirstPageNumber, new { id = "txtFirstPageNumber", @class = "form-control", @placeholder = "First page number", required = "true" })
-                                @Html.ValidationMessageFor(model => model.BookFirstPageNumber, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label class="form-label">Last Page Number<sup class="text-danger" title="Required">*</sup></label>
-                                @Html.TextBoxFor(model => model.BookLastPageNumber, new { id = "txtLastPageNumber", @class = "form-control", @placeholder = "Last page number", required = "true" })
-                                @Html.ValidationMessageFor(model => model.BookLastPageNumber, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label class="form-label">Total Page<sup class="text-danger" title="Required">*</sup></label>
-                                @Html.TextBoxFor(model => model.TotalBookPage, new { id = "txtTotalBookPage", @class = "form-control", @placeholder = "Total book page", required = "true", @readonly = "true" })
-                                @Html.ValidationMessageFor(model => model.TotalBookPage, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
 
                         <div class="col-md-12">
                             <div class="form-group">
@@ -153,7 +122,7 @@
                             </thead>
                             @{int sl = 0;}
                             <tbody>
-                                @foreach (var item in Model.ChequeBookList)
+                                @foreach (var item in Model.BankAccountInfoList)
                                 {
                                     <tr>
                                         <td>
@@ -163,31 +132,14 @@
                                         <td>@item.BankBranchName</td>
                                         <td>@item.AccountName</td>
                                         <td>@item.AccountNumber</td>
-                                        <td>@item.ChequeBookNo</td>
-                                        <td>@item.BookFirstPageNumber</td>
-                                        <td>@item.BookLastPageNumber</td>
-                                        <td>@item.TotalBookPage</td>
-                                        <td>@item.UsedBookPage</td>
                                         <td>@item.Remarks</td>
                                         <td>
-                                            @if (item.UsedBookPage > 0)
-                                            {
-                                                <a id="@item.ChequeBookId" class="linkPointer disabled" title="Disabled"><i class="fa fa-pencil-square-o"></i></a>
+                                            <a id="@item.BankAccountInfoId" onclick="makeEditble(@item.BankAccountInfoId);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
-                                                <a id="@item.ChequeBookId" class="linkPointer disabled" title="Disabled"
-                                                   data-placement="top">
-                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                </a>
-                                            }
-                                            else
-                                            {
-                                                <a id="@item.ChequeBookId" onclick="makeEditble(@item.ChequeBookId);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
-
-                                                <a id="@item.ChequeBookId" onclick="makeDeletable(@item.ChequeBookId);" class="linkPointer" data-toggle="modal" data-target="#ChequeRegisterDeleteModal" title="Delete"
-                                                   data-placement="top">
-                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                </a>
-                                            }
+                                            <a id="@item.BankAccountInfoId" onclick="makeDeletable(@item.BankAccountInfoId);" class="linkPointer" data-toggle="modal" data-target="#ChequeRegisterDeleteModal" title="Delete"
+                                               data-placement="top">
+                                                <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                            </a>
                                         </td>
                                     </tr>
                                 }
@@ -203,7 +155,7 @@
 @using (Html.BeginForm("NewChequeBook", "ChequeRegister", FormMethod.Post, new { id = "DeleteChequeBookFormId", @class = "formValidator", }))
 {
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    @Html.HiddenFor(model => model.ChequeBookId, new { Value = "", id = "ChequeBookDelete" })
+    @Html.HiddenFor(model => model.BankAccountInfoId, new { Value = "", id = "ChequeBookDelete" })
     @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionIdDelete" })
     @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFKDelete" })
 
